--- a/code/debug_viz.ipynb
+++ b/code/debug_viz.ipynb
@@ -24,7 +24,8 @@
    "source": [
     "%pip install transformers\n",
     "%pip install wandb\n",
-    "%pip install langdetect"
+    "%pip install langdetect\n",
+    "%pip install sentencepiece"
    ]
   },
   {
@@ -50,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=104000, to_=105000)\n",
+    "#state.load_train_nbs_range(from_=104000, to_=105000)\n",
     "#state.load_train_nbs_tail(1000)"
    ]
   },
@@ -125,30 +126,26 @@
     "    for pos, cell_id in enumerate(get_code_cells(nb)):\n",
     "        cells.append(OneCell(score=pos+0.5, cell_id=cell_id, cell_type=\"code\"))\n",
     "\n",
+    "    markdown_cells = get_markdown_cells(nb)\n",
     "\n",
-    "    samples = gen_samples(state, nb, graph3_model, unixcoder_model, correct_order=None)\n",
-    "    batches = split_into_batches(samples, state.config.batch_size)\n",
+    "    for cell_id in markdown_cells:            \n",
+    "        coef = graph_weight\n",
     "\n",
-    "    for samples in batches:\n",
-    "        for i in range(len(samples)):\n",
-    "            cell_id = samples[i].md_cell_id\n",
-    "            \n",
-    "            coef = graph_weight\n",
-    "            \n",
-    "            graph_sims_probs = get_probs_by_embeddings(graph3_embeddings, cell_id, code_cell_ids, graph3_model.coef_mul)\n",
-    "            unix_sims_probs = get_probs_by_embeddings(unix_embeddings, cell_id, code_cell_ids, 1000.0)\n",
-    "            sims_probs = [a*coef + b*(1 - coef) for (a, b) in zip(graph_sims_probs, unix_sims_probs)]\n",
-    "            scores = [0.0] * len(sims_probs)\n",
-    "            for i in range(len(sims_probs)):\n",
-    "                for j in range(len(sims_probs)):\n",
-    "                    scores[j] += abs(i - j) * sims_probs[i]\n",
-    "            best_pos = scores.index(min(scores))\n",
-    "            \n",
-    "            \n",
-    "            cells.append(OneCell(score=best_pos, cell_id=cell_id, cell_type=\"markdown\"))\n",
+    "        graph_sims_probs = get_probs_by_embeddings(graph3_embeddings, cell_id, code_cell_ids, graph3_model.coef_mul)\n",
+    "        unix_sims_probs = get_probs_by_embeddings(unix_embeddings, cell_id, code_cell_ids, 1000.0)\n",
+    "        sims_probs = [a*coef + b*(1 - coef) for (a, b) in zip(graph_sims_probs, unix_sims_probs)]\n",
+    "        scores = [0.0] * len(sims_probs)\n",
+    "        for i in range(len(sims_probs)):\n",
+    "            for j in range(len(sims_probs)):\n",
+    "                scores[j] += abs(i - j) * sims_probs[i]\n",
+    "        best_pos = scores.index(min(scores))\n",
+    "\n",
+    "\n",
+    "        cells.append(OneCell(score=best_pos, cell_id=cell_id, cell_type=\"markdown\"))\n",
     "\n",
     "    cells.sort(key=lambda x:x.score)\n",
     "    return list(map(lambda c:c.cell_id, cells))\n",
+    "\n",
     "\n",
     "@torch.no_grad()\n",
     "def test(state: State, graph3_model: MyGraphModel, unixcoder_model):\n",
@@ -187,24 +184,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
+    "    \n",
     "@torch.no_grad()\n",
     "def test(state: State, graph3_model: MyGraphModel, unixcoder_model, nb_id):\n",
     "    graph3_model.eval()\n",
     "    unixcoder_model.eval()\n",
     "    print('Start testing model:')\n",
     "    \n",
-    "    df = state.cur_train_nbs\n",
-    "    nb = df.loc[nb_id]\n",
+    "    nb = state.load_one_nb(nb_id)\n",
+    "   \n",
+    "\n",
+    "    start = time.time()\n",
     "    graph3_embeddings = graph_model.get_nb_embeddings(state, graph3_model, nb)\n",
+    "    end = time.time()\n",
+    "    print('time:', end - start)\n",
     "    unix_embeddings = unixcoder.get_nb_embeddings(state, unixcoder_model, nb)\n",
     "\n",
-    "    my_orders = predict_order(state, nb, graph3_model, unixcoder_model, graph3_embeddings, unix_embeddings, graph_weight=0.5)\n",
+    "    my_orders = predict_order(state, nb, graph3_model, unixcoder_model, graph3_embeddings, unix_embeddings, graph_weight=1.0)\n",
     "    score = metric.calc_nb_score(\n",
     "        my_order=my_orders, correct_order=state.df_orders.loc[nb_id])\n",
     "    print(score)\n",
     "    \n",
     "#state.config.clean_html = False\n",
-    "test(state, graph3_model, unixcoder_model, nb_id='73fe34072424ad')"
+    "test(state, graph3_model, unixcoder_model, nb_id='2fa216ddc5c8cd')"
    ]
   },
   {
@@ -259,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
