--- a/code/test_graph3.ipynb
+++ b/code/test_graph3.ipynb
@@ -23,7 +23,8 @@
    "outputs": [],
    "source": [
     "%pip install transformers\n",
-    "%pip install wandb"
+    "%pip install wandb\n",
+    "%pip install langdetect"
    ]
   },
   {
