try other lang translations

--- a/code/debug_viz.ipynb
+++ b/code/debug_viz.ipynb
@@ -25,7 +25,27 @@
     "%pip install transformers\n",
     "%pip install wandb\n",
     "%pip install langdetect\n",
-    "%pip install sentencepiece"
+    "%pip install sentencepiece\n",
+    "%pip install easynmt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from easynmt import EasyNMT\n",
+    "model = EasyNMT('opus-mt')\n",
+    "\n",
+    "#Translate a single sentence to German\n",
+    "print(model.translate('This is a sentence we want to translate to German', target_lang='de'))\n",
+    "\n",
+    "#Translate several sentences to German\n",
+    "sentences = ['You can define a list with sentences.',\n",
+    "             'All sentences are translated to your target language.',\n",
+    "             'Note, you could also mix the languages of the sentences.']\n",
+    "print(model.translate(sentences, target_lang='de'))"
    ]
   },
   {
@@ -184,6 +204,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "state.easymnt = EasyNMT('opus-mt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import time\n",
     "    \n",
     "@torch.no_grad()\n",
@@ -207,7 +236,8 @@
     "    print(score)\n",
     "    \n",
     "#state.config.clean_html = False\n",
-    "test(state, graph3_model, unixcoder_model, nb_id='2fa216ddc5c8cd')"
+    "\n",
+    "test(state, graph3_model, unixcoder_model, nb_id='d1ef1808a5d61a')"
    ]
   },
   {
