--- a/code/test_graph3.ipynb
+++ b/code/test_graph3.ipynb
@@ -142,7 +142,7 @@
     "def test(state: State, model: MyGraphModel, use_sigmoid, save_to_wandb=True):\n",
     "    print('Start testing model:', model.name)\n",
     "    if save_to_wandb:\n",
-    "        init_wandb(name='test-graph3-model-'+model.name)\n",
+    "        init_wandb(name='test-graph3-model-'+model.name+';try-translate')\n",
     "    df = state.cur_train_nbs\n",
     "    all = df.index.get_level_values(0).unique()\n",
     "    sum_scores = Score(0, 0)\n",
