fix new data parser

--- a/code/test_graph3.ipynb
+++ b/code/test_graph3.ipynb
@@ -63,7 +63,7 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "model = MyGraphModel(state, preload_state=\"graph-model-epoch3.bin\")\n",
+    "model = MyGraphModel(state, preload_state=\"graph-model-ext-10k.bin\")\n",
     "model.eval()\n",
     "print('Model loaded')"
    ]
@@ -142,7 +142,7 @@
     "def test(state: State, model: MyGraphModel, use_sigmoid, save_to_wandb=True):\n",
     "    print('Start testing model:', model.name)\n",
     "    if save_to_wandb:\n",
-    "        init_wandb(name='test-graph3-model-'+model.name+';try-translate')\n",
+    "        init_wandb(name='test-graph3-model-'+model.name+';ext-data')\n",
     "    df = state.cur_train_nbs\n",
     "    all = df.index.get_level_values(0).unique()\n",
     "    sum_scores = Score(0, 0)\n",
