--- a/code/train_graph3.ipynb
+++ b/code/train_graph3.ipynb
@@ -56,7 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=0, to_=100000)"
+    "# state.load_train_nbs_range(from_=0, to_=100000)\n",
+    "state.load_additional_data(nrows=40*10000)"
    ]
   },
   {
@@ -70,11 +71,12 @@
     "from cosine_train import run_train_all_new\n",
     "\n",
     "\n",
-    "model = MyGraphModel(state, preload_state=\"graph-model-epoch3.bin\")\n",
-    "#model = MyGraphModel(state, next_code_cells=2, coef_mul=25)\n",
+    "# model = MyGraphModel(state, preload_state=\"graph-model-epoch3.bin\")\n",
+    "model = MyGraphModel(state, next_code_cells=2, coef_mul=25)\n",
     "\n",
     "\n",
-    "run_train_all_new(state, model, rand_seed=787788+3, optimizer_state=\"graph-model-epoch3.opt.bin\")\n",
+    "# run_train_all_new(state, model, rand_seed=787788+3, optimizer_state=\"graph-model-epoch3.opt.bin\")\n",
+    "run_train_all_new(state, model, rand_seed=787788+3)\n",
     "\n",
     "# model.save('graph3-cur-final')\n",
     "\n",
@@ -89,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"epoch4\")"
+    "model.save(\"ext-10k\")"
    ]
   }
  ],
