--- a/code/test_ensemble.ipynb
+++ b/code/test_ensemble.ipynb
@@ -63,7 +63,7 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "graph3_model = MyGraphModel(state, preload_state=\"graph-model-2epoch-ncs=2.bin\")\n",
+    "graph3_model = MyGraphModel(state, preload_state=\"graph-model-epoch3.bin\")\n",
     "graph3_model.to(state.device)\n",
     "print('Graph3 model loaded')"
    ]
@@ -76,7 +76,7 @@
    "source": [
     "import unixcoder\n",
     "\n",
-    "unixcoder_model = unixcoder.reload_model(state, \"model-epoch1.5.bin\")\n",
+    "unixcoder_model = unixcoder.reload_model(state, \"model-cur-final.bin\")\n",
     "print('Unixcoder model loaded')"
    ]
   },
@@ -161,11 +161,10 @@
     "    return list(map(lambda c:c.cell_id, cells))\n",
     "\n",
     "@torch.no_grad()\n",
-    "def test(state: State, graph3_model: MyGraphModel, unixcoder_model, ensemble_model, save_to_wandb=True):\n",
+    "def test(state: State, graph3_model: MyGraphModel, unixcoder_model, save_to_wandb=True):\n",
     "    graph3_model.eval()\n",
     "    unixcoder_model.eval()\n",
-    "    ensemble_model.eval()\n",
-    "    print('Start testing model:', ensemble_model.name)\n",
+    "    print('Start testing model:')\n",
     "    if save_to_wandb:\n",
     "        init_wandb(name='test-ensemble-graph3-unix')\n",
     "\n",
@@ -214,7 +213,7 @@
     "        wandb.finish()\n",
     "\n",
     "\n",
-    "test(state, graph3_model, unixcoder_model, ensemble_model, save_to_wandb=True)\n",
+    "test(state, graph3_model, unixcoder_model, save_to_wandb=False)\n",
     "\n"
    ]
   }
