--- a/code/train_unixcoder.ipynb
+++ b/code/train_unixcoder.ipynb
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "# state.load_train_nbs_range(from_=0, to_=100000)\n",
-    "state.load_additional_data(nrows=40*5)"
+    "state.load_additional_data()"
    ]
   },
   {
@@ -215,15 +215,15 @@
     "def run_train_all_new(state: State):\n",
     "    print('Start training')\n",
     "    all = state.cur_train_nbs.index.get_level_values(0).unique()\n",
-    "    print('Start generating batches...')\n",
-    "    batches = gen_batches(all, state)\n",
-    "    print('Generated batches:', len(batches))\n",
     "    \n",
     "    unixcoder_model = unixcoder.reload_model(state, \"model-epoch1.5.bin\")\n",
     "    model = unixcoder.Model(unixcoder_model)\n",
     "    model.zero_grad()\n",
     "    model.train()\n",
     "\n",
+    "    print('Start generating batches...')\n",
+    "    batches = gen_batches(all, state)\n",
+    "    print('Generated batches:', len(batches))\n",
     "    \n",
     "\n",
     "    learning_rate = 3e-5\n",
@@ -242,12 +242,13 @@
     "        cur_loss = train_on_batch(batch, model, optimizer, scheduler, state)\n",
     "        \n",
     "        w_loss = w_loss * 0.95 + cur_loss * 0.05\n",
-    "        wandb.log({'loss': w_loss})\n",
+    "        wandb.log({'loss': w_loss, 'learning_rate': scheduler.get_last_lr()[0]})\n",
     "            \n",
     "    wandb.finish()\n",
     "    model.save(\"cur-final\")\n",
     "  \n",
-    "    "
+    "\n",
+    "run_train_all_new(state)    "
    ]
   }
  ],
@@ -259,7 +260,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('kaggle')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -273,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
