--- a/code/forsubmit2.ipynb
+++ b/code/forsubmit2.ipynb
@@ -5,18 +5,18 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-03T22:54:51.635829Z",
-     "iopub.status.busy": "2022-08-03T22:54:51.635435Z",
-     "iopub.status.idle": "2022-08-03T22:54:51.641373Z",
-     "shell.execute_reply": "2022-08-03T22:54:51.640384Z",
-     "shell.execute_reply.started": "2022-08-03T22:54:51.635795Z"
+     "iopub.execute_input": "2022-08-09T08:41:02.884550Z",
+     "iopub.status.busy": "2022-08-09T08:41:02.883924Z",
+     "iopub.status.idle": "2022-08-09T08:41:02.912138Z",
+     "shell.execute_reply": "2022-08-09T08:41:02.911151Z",
+     "shell.execute_reply.started": "2022-08-09T08:41:02.884470Z"
     }
    },
    "outputs": [],
    "source": [
-    "GRAPH_MODEL_NAME = \"../input/ai4code-train-ds/graph-model-100k-ncs2.bin\"\n",
-    "UNIX_MODEL_NAME = \"../input/ai4code-train-ds/model-epoch1.5.bin\"\n",
-    "GRAPH_WEIGHT = 0.4\n",
+    "GRAPH_MODEL_NAME = \"../input/ai4code-train-ds/graph-model-ext-epoch1.bin\"\n",
+    "UNIX_MODEL_NAME = \"../input/ai4code-train-ds/model-ext-epoch1.bin\"\n",
+    "GRAPH_WEIGHT = 0.5\n",
     "MODEL_MAX_LEN = 512"
    ]
   },
@@ -25,11 +25,11 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-03T22:10:09.549508Z",
-     "iopub.status.busy": "2022-08-03T22:10:09.549149Z",
-     "iopub.status.idle": "2022-08-03T22:10:09.567656Z",
-     "shell.execute_reply": "2022-08-03T22:10:09.566675Z",
-     "shell.execute_reply.started": "2022-08-03T22:10:09.549476Z"
+     "iopub.execute_input": "2022-08-09T08:41:02.914870Z",
+     "iopub.status.busy": "2022-08-09T08:41:02.914510Z",
+     "iopub.status.idle": "2022-08-09T08:41:04.974380Z",
+     "shell.execute_reply": "2022-08-09T08:41:04.972788Z",
+     "shell.execute_reply.started": "2022-08-09T08:41:02.914835Z"
     }
    },
    "outputs": [],
@@ -129,11 +129,11 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-03T22:43:09.284332Z",
-     "iopub.status.busy": "2022-08-03T22:43:09.283740Z",
-     "iopub.status.idle": "2022-08-03T22:43:09.294249Z",
-     "shell.execute_reply": "2022-08-03T22:43:09.293064Z",
-     "shell.execute_reply.started": "2022-08-03T22:43:09.284295Z"
+     "iopub.execute_input": "2022-08-09T08:41:04.980859Z",
+     "iopub.status.busy": "2022-08-09T08:41:04.980382Z",
+     "iopub.status.idle": "2022-08-09T08:41:04.996261Z",
+     "shell.execute_reply": "2022-08-09T08:41:04.995170Z",
+     "shell.execute_reply.started": "2022-08-09T08:41:04.980818Z"
     }
    },
    "outputs": [],
@@ -204,11 +204,11 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-03T22:27:04.230246Z",
-     "iopub.status.busy": "2022-08-03T22:27:04.229882Z",
-     "iopub.status.idle": "2022-08-03T22:27:04.250889Z",
-     "shell.execute_reply": "2022-08-03T22:27:04.249699Z",
-     "shell.execute_reply.started": "2022-08-03T22:27:04.230213Z"
+     "iopub.execute_input": "2022-08-09T08:41:05.005374Z",
+     "iopub.status.busy": "2022-08-09T08:41:05.003092Z",
+     "iopub.status.idle": "2022-08-09T08:41:05.027062Z",
+     "shell.execute_reply": "2022-08-09T08:41:05.025779Z",
+     "shell.execute_reply.started": "2022-08-09T08:41:05.005335Z"
     }
    },
    "outputs": [],
@@ -309,11 +309,11 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-03T22:06:07.905667Z",
-     "iopub.status.busy": "2022-08-03T22:06:07.904707Z",
-     "iopub.status.idle": "2022-08-03T22:06:07.918636Z",
-     "shell.execute_reply": "2022-08-03T22:06:07.917392Z",
-     "shell.execute_reply.started": "2022-08-03T22:06:07.905630Z"
+     "iopub.execute_input": "2022-08-09T08:41:05.032214Z",
+     "iopub.status.busy": "2022-08-09T08:41:05.031305Z",
+     "iopub.status.idle": "2022-08-09T08:41:05.048940Z",
+     "shell.execute_reply": "2022-08-09T08:41:05.047523Z",
+     "shell.execute_reply.started": "2022-08-09T08:41:05.032174Z"
     }
    },
    "outputs": [],
@@ -388,11 +388,11 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-03T22:50:34.535667Z",
-     "iopub.status.busy": "2022-08-03T22:50:34.535277Z",
-     "iopub.status.idle": "2022-08-03T22:50:34.592975Z",
-     "shell.execute_reply": "2022-08-03T22:50:34.591923Z",
-     "shell.execute_reply.started": "2022-08-03T22:50:34.535633Z"
+     "iopub.execute_input": "2022-08-09T08:41:05.052766Z",
+     "iopub.status.busy": "2022-08-09T08:41:05.051081Z",
+     "iopub.status.idle": "2022-08-09T08:41:07.123677Z",
+     "shell.execute_reply": "2022-08-09T08:41:07.122131Z",
+     "shell.execute_reply.started": "2022-08-09T08:41:05.052731Z"
     }
    },
    "outputs": [],
@@ -768,11 +768,11 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-03T22:07:58.298138Z",
-     "iopub.status.busy": "2022-08-03T22:07:58.297228Z",
-     "iopub.status.idle": "2022-08-03T22:07:58.347323Z",
-     "shell.execute_reply": "2022-08-03T22:07:58.346148Z",
-     "shell.execute_reply.started": "2022-08-03T22:07:58.298092Z"
+     "iopub.execute_input": "2022-08-09T08:42:46.292559Z",
+     "iopub.status.busy": "2022-08-09T08:42:46.292105Z",
+     "iopub.status.idle": "2022-08-09T08:42:46.360614Z",
+     "shell.execute_reply": "2022-08-09T08:42:46.359665Z",
+     "shell.execute_reply.started": "2022-08-09T08:42:46.292528Z"
     }
    },
    "outputs": [],
@@ -830,9 +830,9 @@
     "    def __init__(self, state: State, preload_state=None, next_code_cells=1, coef_mul=25):\n",
     "        super(MyGraphModel, self).__init__()\n",
     "        self.graph = AutoModel.from_pretrained(\n",
-    "            '../input/graphcodebert-base/graphcodebert-base')\n",
+    "            '../input/graphcodebert-base')\n",
     "        self.tokenizer = AutoTokenizer.from_pretrained(\n",
-    "            '../input/graphcodebert-base/graphcodebert-base')\n",
+    "            '../input/graphcodebert-base')\n",
     "        self.top = nn.Linear(768, 1)\n",
     "        self.dropout = nn.Dropout(0.2)\n",
     "        self.next_code_cells = next_code_cells\n",
@@ -1092,11 +1092,11 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-03T22:14:11.774808Z",
-     "iopub.status.busy": "2022-08-03T22:14:11.774381Z",
-     "iopub.status.idle": "2022-08-03T22:14:11.798471Z",
-     "shell.execute_reply": "2022-08-03T22:14:11.797256Z",
-     "shell.execute_reply.started": "2022-08-03T22:14:11.774772Z"
+     "iopub.execute_input": "2022-08-09T08:41:07.216016Z",
+     "iopub.status.busy": "2022-08-09T08:41:07.215724Z",
+     "iopub.status.idle": "2022-08-09T08:41:07.246058Z",
+     "shell.execute_reply": "2022-08-09T08:41:07.244929Z",
+     "shell.execute_reply.started": "2022-08-09T08:41:07.215991Z"
     }
    },
    "outputs": [],
@@ -1222,11 +1222,11 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-03T22:59:51.241510Z",
-     "iopub.status.busy": "2022-08-03T22:59:51.241136Z",
-     "iopub.status.idle": "2022-08-03T23:00:12.436819Z",
-     "shell.execute_reply": "2022-08-03T23:00:12.435871Z",
-     "shell.execute_reply.started": "2022-08-03T22:59:51.241478Z"
+     "iopub.execute_input": "2022-08-09T08:42:55.634175Z",
+     "iopub.status.busy": "2022-08-09T08:42:55.633796Z",
+     "iopub.status.idle": "2022-08-09T08:43:34.533745Z",
+     "shell.execute_reply": "2022-08-09T08:43:34.532642Z",
+     "shell.execute_reply.started": "2022-08-09T08:42:55.634138Z"
     }
    },
    "outputs": [],
@@ -1296,11 +1296,11 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-03T23:01:47.636144Z",
-     "iopub.status.busy": "2022-08-03T23:01:47.635471Z",
-     "iopub.status.idle": "2022-08-03T23:01:48.283888Z",
-     "shell.execute_reply": "2022-08-03T23:01:48.283015Z",
-     "shell.execute_reply.started": "2022-08-03T23:01:47.636106Z"
+     "iopub.execute_input": "2022-08-09T08:45:24.239861Z",
+     "iopub.status.busy": "2022-08-09T08:45:24.239383Z",
+     "iopub.status.idle": "2022-08-09T08:45:24.288446Z",
+     "shell.execute_reply": "2022-08-09T08:45:24.287182Z",
+     "shell.execute_reply.started": "2022-08-09T08:45:24.239822Z"
     }
    },
    "outputs": [],
@@ -1314,11 +1314,11 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-03T23:01:56.613626Z",
-     "iopub.status.busy": "2022-08-03T23:01:56.613257Z",
-     "iopub.status.idle": "2022-08-03T23:03:14.698345Z",
-     "shell.execute_reply": "2022-08-03T23:03:14.697251Z",
-     "shell.execute_reply.started": "2022-08-03T23:01:56.613591Z"
+     "iopub.execute_input": "2022-08-09T08:45:29.009883Z",
+     "iopub.status.busy": "2022-08-09T08:45:29.009428Z",
+     "iopub.status.idle": "2022-08-09T08:45:31.343650Z",
+     "shell.execute_reply": "2022-08-09T08:45:31.342541Z",
+     "shell.execute_reply.started": "2022-08-09T08:45:29.009844Z"
     }
    },
    "outputs": [],
