--- a/code/forsubmit2.ipynb
+++ b/code/forsubmit2.ipynb
@@ -1276,8 +1276,11 @@
     "        coef = graph_weight\n",
     "\n",
     "        graph_sims_probs = get_probs_by_embeddings(graph3_embeddings, cell_id, code_cell_ids, graph3_model.coef_mul)\n",
-    "        unix_sims_probs = get_probs_by_embeddings(unix_embeddings, cell_id, code_cell_ids, 1000.0)\n",
-    "        sims_probs = [a*coef + b*(1 - coef) for (a, b) in zip(graph_sims_probs, unix_sims_probs)]\n",
+    "        if unix_embeddings is None:\n",
+    "            sims_probs = graph_sims_probs\n",
+    "        else:\n",
+    "            unix_sims_probs = get_probs_by_embeddings(unix_embeddings, cell_id, code_cell_ids, 1000.0)\n",
+    "            sims_probs = [a*coef + b*(1 - coef) for (a, b) in zip(graph_sims_probs, unix_sims_probs)]\n",
     "        scores = [0.0] * len(sims_probs)\n",
     "        for i in range(len(sims_probs)):\n",
     "            for j in range(len(sims_probs)):\n",
@@ -1323,6 +1326,8 @@
    },
    "outputs": [],
    "source": [
+    "import time\n",
+    "\n",
     "@torch.no_grad()\n",
     "def save_results(state, graph3_model, unixcoder_model):\n",
     "    res = []\n",
@@ -1334,14 +1339,23 @@
     "    df = state.test_df\n",
     "    # df = state.cur_train_nbs # TODO: change!\n",
     "    all = df.index.get_level_values(0).unique()\n",
+    "    total_nbs = len(all)\n",
+    "    start_time = time.time()\n",
     "\n",
     "    for cnt, nb_id in enumerate(tqdm(all)):\n",
-    "        nb = df.loc[nb_id]\n",
-    "        graph3_embeddings = get_graph_nb_embeddings(state, graph3_model, nb)\n",
-    "        unix_embeddings = get_unix_nb_embeddings(state, unixcoder_model, nb)\n",
+    "        elapsed_s = time.time() - start_time\n",
+    "        expected_total_time = elapsed_s / (cnt + 1) * total_nbs\n",
+    "        fast_mode = (expected_total_time > 3600 * 8) and (cnt > 1000)\n",
     "\n",
-    "        my_order = predict_order(state, nb, graph3_model, unixcoder_model, graph3_embeddings, unix_embeddings, graph_weight=GRAPH_WEIGHT)\n",
-    "        \n",
+    "        try:\n",
+    "            nb = df.loc[nb_id]\n",
+    "            graph3_embeddings = get_graph_nb_embeddings(state, graph3_model, nb)\n",
+    "            unix_embeddings = None if fast_mode else get_unix_nb_embeddings(state, unixcoder_model, nb)\n",
+    "\n",
+    "            my_order = predict_order(state, nb, graph3_model, unixcoder_model, graph3_embeddings, unix_embeddings, graph_weight=GRAPH_WEIGHT)\n",
+    "        except:\n",
+    "            my_order = list(nb.index)\n",
+    "\n",
     "        my_order = \" \".join(my_order)\n",
     "        res.append({'id' : nb_id, 'cell_order' : my_order})\n",
     "        \n",
@@ -1357,7 +1371,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.13 ('kaggle')",
    "language": "python",
    "name": "python3"
   },
@@ -1371,7 +1385,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.7.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "4d4c7731748faf67a6b8ce01c6c5d4488a25691d99afc96e6b91ec13b7fca11a"
+   }
   }
  },
  "nbformat": 4,
